--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,32 +1,47 @@
 body {
+  background-color: white;
   margin: 0px;
   padding-top:0px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-nav {
-  display: flex;
-  flex-direction: wrap;
-  margin: 0px;
-  padding:5px;
-  background-color: darkcyan;
-}
-
-ul {
-  display: flex;
-  flex-direction: wrap;
-}
-
-ul li {
-  padding-right: 30px;
-  list-style: none;
-}
-
-ul li a {
-  color:white;
-  text-decoration: none;
+  font-family: 'Quicksand',serif;
+  justify-content: center;
+  text-align: center;
 }
 
 header{
-  padding: 10px;
+  padding-top:50px;
 }
+header h1{
+  font-size: 4em;
+  font-weight: 100;
+  font-family: "Roboto", sans-serif;
+}
+.blue{
+  color:#0B7A96;
+}
+.green{
+  color: #197D19;
+}
+.black{
+  color: black;
+}
+
+.upload-icon{
+  color:white;
+  background-color: #333333;
+  padding: 4px;
+  border-radius: 5px;
+}
+.send-icon{
+  color:black;
+  padding: 4px;
+  padding-left: 10px;
+}
+.btn-message{
+  font-family: 'Quicksand',sans-serif;
+  font-weight: 900;
+}
+input{
+  display: none;
+}
+
+
