--- a/views/index.jade
+++ b/views/index.jade
@@ -1,14 +1,23 @@
 extends layout
 
 block content
-  nav 
-    ul 
-      li 
-        a(href='') CSV To JSON
-      li(class='nav-upload') 
-        a(href='') Upload file
 
   header  
+    div(class='main')
+      h1(class='green') CSV 
+        spam(class='black') To
+        spam(class='blue')  JSON
+      form(action='/csv-to-json',method='post',enctype='multipart/form-data')
+        label(for='file' class='fa fa-file upload-icon') 
+          spam(class='btn-message') Select file 
+          input(type='file' id="file" class='input-file' name='csv-file' required='required')
+        label(for='submit' class='fa fa-upload send-icon')  
+          spam(class='btn-message') Send
+          input(type='submit' value='send' id='submit' name='submit')
+
+  div(class='message')
+    h2 Select your csv file and click on send button.   
+    h3 Make sure your file extension is .csv.
     
    
 
