--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel ="stylesheet",href="https://fonts.googleapis.com/css?family=Quicksand:300|Roboto:100")
+    link(rel='stylesheet',href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
   body
-    script(src="/javascripts/csvtojson.js")
     block content
